<resources>
    <string name="app_name">MarsTest</string>
    <string name="btn_intent_extra">intent_extra</string>
    <string name="btn_sentto">发送短信</string>
    <string name="btn_start">start</string>
    <string name="btn_end">end</string>
    <string name="btn_createdb">createDatabase</string>
    <string name="btn_updatedb">updateDatabase</string>
    <string name="btn_closedb">closeDatabase</string>
    <string name="btn_insert">insert</string>
    <string name="btn_update">update</string>
    <string name="btn_select">select</string>
    <string name="btn_downloadtxt">Download Txt</string>
    <string name="btn_downloadMP3">Download MP3</string>
    <string name="btn_cpinsert">插入数据</string>
    <string name="btn_cpselect">查询数据</string>
    <string name="btn_xmlresolve">XML Resolve</string>
    <string name="btn_receiver">BroadcastReceiver</string>
    <string name="btn_smsreceiverbind">Bind SMS Receiver</string>
    <string name="btn_smsreceiverunbind">Unbind SMS Receiver</string>
    <string name="btn_sendsms">Send SMS</string>
    <string name="btn_wifistart">Start Wifi</string>
    <string name="btn_wifistop">Stop Wifi</string>
    <string name="btn_wifistatus">Wifi Status</string>
    <string name="btn_socket">启动监听线程</string>
    <string name="btn_startservice">Start Service</string>
    <string name="btn_stopservice">Stop Service</string>
    <string name="btn_bindservice">Bind Service</string>
    <string name="btn_servicesave">Service Save</string>
    <string name="btn_serviceget">Service Get</string>
    <string name="btn_servicebind03">绑定Service</string>
    <string name="btn_servicesend03">发送请求</string>
    <string name="btn_getactivity">GetActivity</string>
    <string name="btn_getbroadcast">GetBroadcast</string>
    <string name="btn_translate">Translate移动</string>
    <string name="btn_alpha">Alpha淡入淡出</string>
    <string name="btn_rotate">Rotate旋转</string>
    <string name="btn_scale">Scale缩放</string>
    <string name="btn_add">添加图片</string>
    <string name="btn_remove">删除图片</string>
    <string name="btn_jsonparse">json parse test</string>
    <string name="btn_gson">gson parse test</string>
    <string name="btn_jsonarray">json array parse test</string>
    <string name="btn_bluetooth">获得已配对蓝牙</string>
    <string name="btn_bluetoothdiscover">设置蓝牙可见性</string>
    <string name="btn_bluetoothscan">扫描可配对蓝牙</string>
    <string name="btn_userlocation">获取用户定位</string>
    <string name="btn_bestprovider">获取最好的Provider</string>
    <string name="btn_geocoding">Geocoding from LocatoinName</string>
    <string name="btn_reversegeocoding">Geocoding from Locatoin</string>
    <string name="btn_userlocationbyhttp">UserLocationByHttp</string>
</resources>
