<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivTweendedAnimations"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/after"
        android:layout_marginTop="80dp"/>
    <Button
        android:id="@+id/btnAlpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/btn_alpha"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btnRotate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_rotate"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btnScale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_scale"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btnTranslate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_translate"
        android:textAllCaps="false"/>
</LinearLayout>