<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnBlueTooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bluetooth"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btnBlueToothDiscover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bluetoothdiscover"/>
    <Button
        android:id="@+id/btnBlueToothScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bluetoothscan"/>
</LinearLayout>