<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btnWifiStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_wifistart"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btnWifiStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_wifistop"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btnWifiStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_wifistatus"
        android:textAllCaps="false"/>
</LinearLayout>